--- a/ur5_e_moveit_config/config/controllers.yaml
+++ b/ur5_e_moveit_config/config/controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: ""
+  - name: "pos_joint_traj_controller"
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
