--- a/ur_gazebo/config/ur5e_controllers.yaml
+++ b/ur_gazebo/config/ur5e_controllers.yaml
@@ -12,18 +12,53 @@ pos_joint_traj_controller:
     - wrist_2_joint
     - wrist_3_joint
   constraints:
+    # Commented values are from the real UR driver for ROS
+    # Universal_Robots_ROS_driver/ur_robot_driver/config/ur5e_controllers.yaml
     goal_time: 0.6
     stopped_velocity_tolerance: 0.05
-    shoulder_pan_joint: {trajectory: 0.1, goal: 0.1}
-    shoulder_lift_joint: {trajectory: 0.1, goal: 0.1}
-    elbow_joint: {trajectory: 0.1, goal: 0.1}
-    wrist_1_joint: {trajectory: 0.1, goal: 0.1}
-    wrist_2_joint: {trajectory: 0.1, goal: 0.1}
-    wrist_3_joint: {trajectory: 0.1, goal: 0.1}
+    shoulder_pan_joint: {trajectory: 0.1, goal: 0.1} # {trajectory: 0.2, goal: 0.1}
+    shoulder_lift_joint: {trajectory: 0.1, goal: 0.1} # {trajectory: 0.2, goal: 0.1}
+    elbow_joint: {trajectory: 0.1, goal: 0.1} # {trajectory: 0.2, goal: 0.1}
+    wrist_1_joint: {trajectory: 0.1, goal: 0.1} # {trajectory: 0.2, goal: 0.1}
+    wrist_2_joint: {trajectory: 0.1, goal: 0.1} # {trajectory: 0.2, goal: 0.1}
+    wrist_3_joint: {trajectory: 0.1, goal: 0.1} # {trajectory: 0.2, goal: 0.1}
   stop_trajectory_duration: 0.5
   state_publish_rate: *loop_hz
-  action_monitor_rate: 10
+  action_monitor_rate: 10 # 20
 
 joint_group_pos_controller:
   type: position_controllers/JointGroupPositionController
   joints: *robot_joints
+
+# Below from the real UR driver for ROS
+# vel_joint_traj_controller:
+#    type: velocity_controllers/JointTrajectoryController
+#    joints: *robot_joints
+#    constraints:
+#       goal_time: 0.6
+#       stopped_velocity_tolerance: 0.05
+#       shoulder_pan_joint: {trajectory: 0.1, goal: 0.1}
+#       shoulder_lift_joint: {trajectory: 0.1, goal: 0.1}
+#       elbow_joint: {trajectory: 0.1, goal: 0.1}
+#       wrist_1_joint: {trajectory: 0.1, goal: 0.1}
+#       wrist_2_joint: {trajectory: 0.1, goal: 0.1}
+#       wrist_3_joint: {trajectory: 0.1, goal: 0.1}
+#    gains:
+#       #!!These values have not been optimized!!
+#       shoulder_pan_joint:  {p: 5.0,  i: 0.05, d: 0.1, i_clamp: 1}
+#       shoulder_lift_joint: {p: 5.0,  i: 0.05, d: 0.1, i_clamp: 1}
+#       elbow_joint:         {p: 5.0,  i: 0.05, d: 0.1, i_clamp: 1}
+#       wrist_1_joint:       {p: 5.0,  i: 0.05, d: 0.1, i_clamp: 1}
+#       wrist_2_joint:       {p: 5.0,  i: 0.05, d: 0.1, i_clamp: 1}
+#       wrist_3_joint:       {p: 5.0,  i: 0.05, d: 0.1, i_clamp: 1}
+#    # Use a feedforward term to reduce the size of PID gains
+#    velocity_ff:
+#       shoulder_pan_joint: 1.0
+#       shoulder_lift_joint: 1.0
+#       elbow_joint: 1.0
+#       wrist_1_joint: 1.0
+#       wrist_2_joint: 1.0
+#       wrist_3_joint: 1.0
+#    stop_trajectory_duration: 0.5
+#    state_publish_rate: *loop_hz
+#    action_monitor_rate: 20
