--- a/ur_gazebo/config/ur5e_controllers.yaml
+++ b/ur_gazebo/config/ur5e_controllers.yaml
@@ -171,3 +171,18 @@ robot_status_controller:
    type: industrial_robot_status_controller/IndustrialRobotStatusController
    handle_name: industrial_robot_status_handle
    publish_rate: 10
+
+# From Fraunhofer that uses the same HW interfaces
+fzi_cartesian_motion_controller:
+    type: "position_controllers/CartesianMotionController"
+    end_effector_link: "tool0"
+    robot_base_link: "base_link"
+    target_frame_topic: "tcp_frame"
+    joints: *robot_joints
+    pd_gains:
+        trans_x: {p: 10.0}
+        trans_y: {p: 10.0}
+        trans_z: {p: 10.0}
+        rot_x:   {p: 1.0}
+        rot_y:   {p: 1.0}
+        rot_z:   {p: 1.0}
