--- a/ur_gazebo/package.xml
+++ b/ur_gazebo/package.xml
@@ -29,6 +29,8 @@
   <exec_depend>position_controllers</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>ur_description</exec_depend>
+  <exec_depend>gazebo_plugins</exec_depend>
+  <exec_depend>gazebo_ros_pkgs</exec_depend>
 
   <export>
   </export>
