--- a/ur_gazebo/config/camera_base.yaml
+++ b/ur_gazebo/config/camera_base.yaml
@@ -31,7 +31,7 @@ joint:
 camera:
   name: camera_base
   pose: 0 0 0 0 0 0
-  update_rate: 15
+  update_rate: 30
   horizontal_fov: 0.78539816339
   image:
     width: 800
@@ -53,6 +53,7 @@ camera:
     camera_name: camera_base
     image_topic_name: image_raw
     camera_info_topic_name: camera_info
+    trigger_topic_name: camera_trigger
     cx_prime:      0        # rectified optical center x, for sim, CxPrime == Cx
     cx:            0        # optical center x
     cy:            0        # optical center y
