--- a/ur_gazebo/config/ft_sensor.yaml
+++ b/ur_gazebo/config/ft_sensor.yaml
@@ -1,10 +1,10 @@
 # FT sensor parameters
 link:
   name: ft_sensor_link
-  length: 0.05
+  length: 0.03
   radius: 0.035
   origin: 
-      xyz: 0 0 0.025
+      xyz: 0 0 0
       rpy: 0 0 0
   inertial:
     mass: 0.1
@@ -22,7 +22,7 @@ joint:
   name: ft_sensor_joint
   parent_link: wrist_3_link
   origin: 
-      xyz: 0 0 0
+      xyz: 0 0 0.015  # z = half of length
       rpy: 0 0 0
 sensor:
   topic_name: ft_sensor/raw_data
